# openinfra-logger

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-notes-v0.1.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
benchmarks/: README.md  node-baseline.js
brand/: README.md  gallery.html
docs/: advanced-configuration.md  architecture.md  installation.md  integration.md  publishing.md  quickstart-go.md  quickstart-node.md  quickstart-python.md  quickstart-rust.md
docs/launch/: dev-to-article.md  ecosystem-checklist.md  linkedin-post.md  show-hn.md  twitter-thread.md
docs/manual/: 01-overview.md  02-concepts.md  03-installation.md  04-configuration.md  05-transports.md  06-formatters.md  07-redaction.md  08-opentelemetry.md  09-analyzer.md  10-performance.md  11-migration.md  12-troubleshooting.md  13-faq.md  14-api-reference.md  README.md
examples/: basic-usage.js  datadog-integration.js  enterprise-security.js  express-integration.js  go-basic-usage.go  opentelemetry-tracing.js  python-basic-usage.py  rust-basic-usage.rs  security-logging.js
go/: doc.go  go.mod  logger.go  logger_test.go
landing/: README.md  index.html
python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
python/openinfra_logger/: __init__.py
python/tests/: test_logger.py  test_redaction.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/: index.js
test/: batching.test.js  formatters.test.js  levels.test.js  logger.test.js  redaction.test.js  transports.test.js
tools/: ai-analyzer.js
