[package]
name = "openinfra-logger"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jonathas Cordeiro <jonathas.cordeiro2023@gmail.com>"]
description = "Universal structured logging — zero-dependency, RFC 8259-compliant JSON, file + console transports. Sibling implementations exist for Node.js, Python and Go with identical JSON output."
license = "MIT"
repository = "https://github.com/jonathascordeiro20/openinfra-logger"
homepage = "https://openinfralogger.fun"
documentation = "https://docs.rs/openinfra-logger"
readme = "README.md"
keywords = ["logging", "logger", "structured", "observability", "telemetry"]
categories = ["development-tools::debugging", "encoding"]

[lib]
name = "openinfra_logger"
path = "src/lib.rs"

[dependencies]
# Intentionally empty. The crate is built from the standard library only.
